server/src/languages/tolk/tree-sitter-tolk/test/corpus/strings.test.txt
========================================================================
String literals with escapes and multiline
========================================================================
fun test() {
    val s1 = "simple string";
    val s2 = "string with \n escape \t and \" quotes";
    val s3 = """
        multiline
        string with "quotes"
        and \n literal backslash
    """;
    val s4 = "";
    val s5 = """""";
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block_statement
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (string_literal))
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (string_literal))
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (string_literal))
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (string_literal))
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (string_literal)))))
